Changelog 1.0.0-1.21:

- Ported to a 1.21 version

Changelog 1.0.1-1.21:

- Updated to 21.0.143
- Added Redstone Shield with Particle System
- Added tooltip that shows if particles are enabled or disabled
- Fixed Creative Mode Tab
- Used new RegisterClientExtensionsEvent instead of deprecated initializeClient

Changelog 1.0.2-1.21:

- Updated to 21.0.167
- Fixed Enchanting