@@ -18,7 +18,7 @@ minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
 neo_version=21.0.167
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.0.167,)
+neo_version_range=[21.0,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
@@ -32,7 +32,7 @@ mod_name=More Vanilla Shields
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT License
 # The mod version. See https://semver.org/
-mod_version=1.0.2-1.21
+mod_version=1.0.3-1.21
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -40,4 +40,4 @@ mod_group_id=com.rajhab.morevanillashields_mod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Rajhab
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.2-1.21-21.0.167
+mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.3-1.21-21.0.167
