@@ -30,7 +30,9 @@ public class ShieldConfig {
     public static final ModConfigSpec.ConfigValue<Integer> END_CRYSTAL_SHIELD_DURABILITY;
     public static final ModConfigSpec.ConfigValue<Boolean> ENABLE_TOOLTIPS;
     public static final ModConfigSpec.ConfigValue<Boolean> ENABLE_PARTICLES;
-    public static final ModConfigSpec.ConfigValue<Double> REDSTONE_SHIELD_DENSITY;
+    public static final ModConfigSpec.ConfigValue<Integer> REDSTONE_SHIELD_DENSITY;
+    public static final ModConfigSpec.ConfigValue<Boolean> ENABLE_EXPLOSION;
+    public static final ModConfigSpec.ConfigValue<Boolean> EXPLOSION_DESTROY_BLOCKS;
 
     static {
         BUILDER.push("Config for More Vanilla Shields!");
@@ -41,8 +43,12 @@ public class ShieldConfig {
                 .define("enableTooltips", true);
         ENABLE_PARTICLES = BUILDER.comment("If you want particles to be enabled then let it on true")
                 .define("enableParticles", true);
+        ENABLE_EXPLOSION = BUILDER.comment("If you want explosions to be enabled, then put it on true")
+                .define("enableExplosion", true);
+        EXPLOSION_DESTROY_BLOCKS = BUILDER.comment("If you want blocks to be destroyed when the end crystal shield explodes, then put it on true")
+                .define("explosionDestroyBlocks", false);
         REDSTONE_SHIELD_DENSITY = BUILDER.comment("Here you can set up the density of the redstone shield. (2500 as max bcs some of yall try to crash some games)")
-                .defineInRange("redstoneShieldDensity", 0.1, 0.1, 2500);
+                .defineInRange("redstoneShieldDensity", 1, 1, 2500);
         LEATHER_SHIELD_DURABILITY = BUILDER.comment("Durability of Leather Shield. Default Durability is 196")
                 .define("leatherShieldDurability", 196);
         GOLD_SHIELD_DURABILITY = BUILDER.comment("Durability of Gold Shield. Default Durability is 322")
