@@ -14,3 +14,11 @@ Changelog 1.0.2-1.21:
 
 - Updated to 21.0.167
 - Fixed Enchanting
+
+Changelog 1.0.3-1.21:
+
+- Fixed Compatibility with older forge versions
+- Fixed Redstone Shield Particle Density
+- Fixed typo in german translation
+- Made the End Crystal Shield explosive (turned on by default. To disable go into config)
+- Made End Crystal Shield Explosion serversided
